--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <h2>NetFlix</h2>
+        </div>
+
+        <ul>
+            <li> <a href="#">Home</a></li>
+            <li> <a href="#">Muvies</a></li>
+            <li> <a href="#">New</a></li>
+            <li> <a href="#">My favorite</a></li>
+            <li> <a href="#">Login</a></li>
+            <label for="chk1" class="menu-close">
+                <i class="fa fa-times" aria-hidden="true"></i>
+            </label>
+        </ul>
+
+        <div class="search">
+            <input type="text" name="search" id="srch" required placeholder="Enter your search">
+            <button type="submit">Search</button>
+        </div>
+
+        <label for="chk1" class="menu-open">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+        </label>
+
+    </header>
 </body>
 </html>
