Carrossel miniatura html e css

--- a/index.html
+++ b/index.html
@@ -156,6 +156,51 @@
 
     </div>
 
+
+    <div class="row">
+        <h2>Recomend</h2>
+    
+
+        <div class="nav">
+            <div class="nav-bar">
+
+                <div class="column active" >
+                    <img src="img/img1.jpg" alt="">
+                </div>
+
+                <div class="column">
+                    <img src="img/img2.jpg" alt="">
+                </div>
+
+                <div class="column">
+                    <img src="img/img3.jpg" alt="">
+                </div>
+
+                <div class="column">
+                    <img src="img/img4.jpg" alt="">
+                </div>
+
+                <div class="column">
+                    <img src="img/img5.jpg" alt="">
+                </div>
+
+                <div class="column">
+                    <img src="img/img6.jpg" alt="">
+                </div>
+
+                <div class="column">
+                    <img src="img/img7.jpg" alt="">
+                </div>
+
+            </div>
+        </div>
+        
+        <!--&lsaquo; &rsaquo;-->>
+        <div class="prev"><</div>
+        <div class="next">></div>
+
+    </div>
+
 </section>
 
 </body>
