--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <header>
+        <input type="checkbox" id="chk1">
         <div class="logo">
             <h2>NetFlix</h2>
         </div>
